# namadexer

./: .gitignore  Cargo.toml  README.md
.namada/namada-internal.00000000000000/: config.toml
benches/: utils.rs
docs/: 03-indexer.md  04-server.md
src/: checksums.rs  config.rs  database.rs  error.rs  lib.rs  tables.rs  utils.rs  views.rs
src/indexer/: block_result.rs  id.rs  mod.rs  tx.rs  utils.rs
src/server/: account.rs  blocks.rs  endpoints.rs  mod.rs  proposals.rs  signatures.rs  status.rs  tx.rs  validators.rs
src/server/endpoints/: account.rs  address.rs  block.rs  proposal.rs  signature.rs  status.rs  transaction.rs  validator.rs
tests/: block_tests.rs
