[package]
name = "namadexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[[bin]]
name = "server"
path = "src/bin/server.rs"
[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

[dependencies]
getrandom = { version = "0.2" }
async-trait = "0.1.51"
namada_core = { git = "https://github.com/anoma/namada", tag = "v0.43.0" }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.43.0", default-features = false, features = ["std", "async-send", "download-params"] }
namada_tx = { git = "https://github.com/anoma/namada", tag = "v0.43.0" }
namada_governance = { git = "https://github.com/anoma/namada", tag = "v0.43.0" }
namada_ibc = { git = "https://github.com/anoma/namada", tag = "v0.43.0" }
namada_token = { git = "https://github.com/anoma/namada", tag = "v0.43.0" }
namada_parameters = { git = "https://github.com/anoma/namada", tag = "v0.43.0" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada", tag = "v0.43.0" }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
hex = { version = "0.4", features = ["serde"] }
http = "0.2.11"
futures-util = { version = "0.3", features = ["sink"] }
bytes = "1.0"
time = "0.3"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "json",
    "std",
    "env-filter",
] }
tracing = { version = "0.1.37", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.3", features = [
    "toml",
    "serde_json",
], default-features = false }
axum = { version = "0.6.18", features = ["tracing", "tokio", "json", "query"] }
serde_derive = "1.0.164"
thiserror = "1.0.40"
serde_json = "1.0.97"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "json",
    "offline",
    "migrate",
] }
prost = "0.12.0"
prost-types = "0.12.0"
futures = "0.3.28"
opentelemetry = "0.20.0"
tracing-opentelemetry = "0.20.0"
tower-http = { version = "0.4.4", features = ["cors"] }
opentelemetry-jaeger = "0.19.0"
opentelemetry_api = { version = "0.20.0", features = ["metrics"] }
axum-prometheus = { version = "0.4.0", optional = true }
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", optional = true }
strum = "0.26.3"
strum_macros = "0.26.3"
tendermint = "0.37.0"
tendermint-config = "0.37.0"
tendermint-rpc = { version = "0.37.0", features = ["http-client"] }
tendermint-proto = "0.37.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
ureq = "2.9.1"
once_cell = "1.19.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = [
    "html_reports",
    "tokio",
    "async_futures",
] }
httpc-test = "0.1.4"

[patch.crates-io]
tendermint        = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
tendermint-rpc    = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
tendermint-proto  = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }
tendermint-config = { git = "https://github.com/informalsystems/tendermint-rs.git", branch = "main" }

[features]
default = []
prometheus = ["metrics-exporter-prometheus", "axum-prometheus"]

[[bench]]
name = "save_blocks_bench"
harness = false

[[bench]]
name = "get_block_bench"
harness = false
